--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+  --light: #fff;
+}
+
+html {
+  font-family: 'Montserrat', sans-serif;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  background: #ccc;
+  width: 100%;
+  height: 100%;
+}
+
+ul {
+  margin-top: 0.4rem;
+  list-style: none;
+}
